// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strongIcon Multiple icons: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "path": "me",
        "pathType": "relative",
        "raw": "[[me.icon*3]]",
        "type": "strongIcon",
      },
      Object {
        "path": "me",
        "pathType": "relative",
        "raw": "[[me.icon*3]]",
        "type": "strongIcon",
      },
      Object {
        "path": "me",
        "pathType": "relative",
        "raw": "[[me.icon*3]]",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strongIcon Simple relative strong icon: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "path": "me",
        "pathType": "relative",
        "raw": "[[me.icon]]",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strongIcon Simple root strong icon: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "path": "/icons/+1",
        "pathType": "root",
        "raw": "[[/icons/+1.icon]]",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strongIcon Strong icon and internal link on same line: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "content": "",
        "href": "Internal link",
        "pathType": "relative",
        "raw": "[Internal link]",
        "type": "link",
      },
      Object {
        "path": "me",
        "pathType": "relative",
        "raw": "[[me.icon]]",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;
